--- a/src/locales/en/pages.json
+++ b/src/locales/en/pages.json
@@ -262,8 +262,8 @@
       }
     ],
     "header": {
-      "title": "WANG CAPITAL HONGKONG",
-      "subtitle": "<strong>Decentralized Web3</strong><br/> Investment Corporation"
+      "title": "WANG CAPITAL",
+      "subtitle": "<strong>Web3</strong> Investment<br/>Corporation"
     },
     "feature": {
       "title": "FEATURES",
