--- a/src/locales/en/pages.json
+++ b/src/locales/en/pages.json
@@ -17,7 +17,7 @@
       "subTitle": "TEAM"
     },
     "partnershipSection": "Partnerships",
-    "rankNetwork": "Falcon defi network plan",
+    "rankNetwork": "Wangcapital network plan",
     "maticPlan": "Matic plan",
     "bnbPlan": "BNB Plan",
     "bonus": "Bonus",
@@ -267,33 +267,33 @@
     },
     "feature": {
       "title": "FEATURES",
-      "subtitle": "Innovative Web3 platform that blends network marketing principles with lucrative NFT farming opportunities, presenting a revolutionary way for users to invest in tokens and coins with high potential for appreciation. We are dedicated to delivering extraordinary returns to our users by allocating a portion of the funds we manage to invest in promising new tokens and coins."
+      "subtitle": "We believe in the power of decentralized governance and community-driven decision-making. Our DAO is designed to empower every member, ensuring that your voice is heard and your contributions are valued."
     },
     "sectionFeature": {
       "fullTransparency": {
-        "title": "Innovative NFT Farming",
-        "subtitle": "Users can participate in our NFT farming program, where a portion of the funds raised from these activities is used to purchase and invest in new tokens and coins."
+        "title": "Transparent Operations",
+        "subtitle": "Transparency is at the core of our DAO. All transactions and decisions are recorded on the blockchain, making our operations open and verifiable for everyone."
       },
       "fullAutomation": {
-        "title": "Astute Investments",
-        "subtitle": "Focusing on selecting tokens that not only have the potential for rapid value growth but are also solidly founded in technological and business principles, we ensure your investments are managed wisely."
+        "title": "Secure and Reliable",
+        "subtitle": "Security is our top priority. Our platform utilizes cutting-edge blockchain technology to ensure that your assets and data are protected at all times."
       },
       "smartContract": {
-        "title": "Multiplied Profits",
-        "subtitle": "FalconDefi aims to maximize user returns through a combination of short-term gains from NFT farming and long-term value growth of the selected tokens."
+        "title": "Incentive Structures",
+        "subtitle": "Contributions are rewarded! Our DAO incentivizes participation through various reward mechanisms, ensuring that your efforts are recognized and compensated."
       },
       "decentralized": {
-        "title": "Full Transparency",
-        "subtitle": "The transparency of blockchain technology allows every transaction to be publicly accessible, ensuring all activities are visible and verifiable at any time."
+        "title": "Easy Onboarding",
+        "subtitle": "New to DAOs? No problem. Our user-friendly interface and comprehensive guides make it easy for anyone to join and start participating."
       }
     },
     "matchingBonusv2": {
-      "title": "World <br/> Community",
-      "description": "The Falcon Defi Network boasts a global community of members. We welcome you to join our vibrant community and engage in team-building on the Falcon Defi Network. Come be a part of the expanding Falcon Defi Network community!"
+      "title": "Global <br/> Community",
+      "description": "Be a part of a worldwide movement. Join us and connect with innovators and visionaries from around the globe. Your voice matters. Let's shape the future together!"
     },
     "populationSection": {
-      "title": "<strong>Falcon Defi</strong> Network Marketing",
-      "content": "Falcon Defi network marketing leverages Web3 and blockchain technology, offering complete transparency where all transactions within the network are publicly viewable, ensuring trust and integrity in every interaction."
+      "title": "<strong>WANG CAPITAL</strong> Decentralized Autonomous Organization (DAO)",
+      "content": "We create a world where decentralized governance empowers communities, fosters innovation, and ensures transparency, security, and equitable growth for all."
     },
     "project": {
       "title": "Project",
