--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -28,7 +28,7 @@
     "myNetwork": "My Network"
   },
   "footer": {
-    "description": "Temukan Kesenian Digital Unik Anda - Beli NFT Dengan Aset Kripto Favorit Anda Seperti XRP, SHIBA, dan Lainnya.",
+    "description": "WANG CAPITAL, Hongkong Web3 Investment Corporation - Decentralized Autonomous Organization (DAO)",
     "listedOn": "Listen On",
     "social": "Social"
   },
