--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -48,13 +48,13 @@
   "copy": "Copy",
   "copied": "Copied!",
   "register": "Register",
-  "sponsor": "Sponsor bonus",
-  "turnover": "Total turnover",
-  "personalBuy": "Personal buy",
+  "sponsor": "Matching Reward",
+  "turnover": "Subscription",
+  "personalBuy": "Direct Sponsor Bonus",
   "nftAllocation": "NFT allocation",
   "referrer": "Referrer",
   "myReferrer": "My Sponsor",
-  "matchingBonus": "Matching bonus",
+  "matchingBonus": "Max Farm",
   "accept": "Accept",
   "telegram": "Telegram",
   "agreeAndAccept": "I Agree & Accept",
@@ -67,7 +67,7 @@
   "referralBonus": "Referral Bonus",
   "rankReward": "Rank Reward",
   "contractGnet": "Import GNET",
-  "contractBullRun": "Import BULRUN",
+  "contractWang": "Import WANG",
   "referralLink": "Referral Link",
   "PrivateSaleNewToken": "Private Sale New Token",
   "PrivateSalePool": "Private Sale",
@@ -78,7 +78,7 @@
   "swipe": "Swipe",
   "genesis": "Genesis",
   "levelBonus": "Level Bonus",
-  "level": "Level",
+  "level": "Matching Level",
   "percent": "Percent",
   "value": "Value",
   "rank": "investor rank",
@@ -89,7 +89,7 @@
   "rankreq": "Rank Req",
   "maxBuyNFT": "Max buy NFT",
   "totalSupply": "Total Supply",
-  "globalNetworkFarm": "NFT FALCON",
+  "globalNetworkFarm": "NFT Wang",
   "remainingFarm": "Total Return",
   "percentage": "Percentage",
   "claim": "Claim",
