--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -81,7 +81,7 @@
   "level": "Matching Level",
   "percent": "Percent",
   "value": "Value",
-  "rank": "investor rank",
+  "rank": "Wang NFT",
   "maticBonus": "USDT bonus",
   "gnetBonus": "GNET bonus",
   "15Leveldown": "15 Level downline",
