--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -48,13 +48,13 @@
   "copy": "Copy",
   "copied": "Copied!",
   "register": "Register",
-  "sponsor": "Matching Reward",
+  "sponsor": "Sponsor Bonus",
   "turnover": "Subscription",
   "personalBuy": "Direct Sponsor Bonus",
   "nftAllocation": "NFT allocation",
   "referrer": "Referrer",
   "myReferrer": "My Sponsor",
-  "matchingBonus": "Max Farm",
+  "matchingBonus": "Matching Reward",
   "accept": "Accept",
   "telegram": "Telegram",
   "agreeAndAccept": "I Agree & Accept",
@@ -71,7 +71,7 @@
   "referralLink": "Referral Link",
   "PrivateSaleNewToken": "Private Sale New Token",
   "PrivateSalePool": "Private Sale",
-  "PersonalNft": "Personal NFT",
+  "PersonalNft": "Total Investment",
   "TotalNetworkMember": "Total network member",
   "ipo": "IPO",
   "swap": "Swap",
@@ -82,6 +82,7 @@
   "percent": "Percent",
   "value": "Value",
   "rank": "Wang NFT",
+  "dailyFarm": "Daily Farm",
   "maticBonus": "USDT bonus",
   "gnetBonus": "GNET bonus",
   "15Leveldown": "15 Level downline",
