--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -82,7 +82,7 @@
   "percent": "Percent",
   "value": "Value",
   "rank": "Wang NFT",
-  "dailyFarm": "Daily Farm",
+  "dailyReward": "Daily Reward",
   "maticBonus": "USDT bonus",
   "gnetBonus": "GNET bonus",
   "15Leveldown": "15 Level downline",
