--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -57,6 +57,7 @@
   "matchingBonus": "Matching Reward",
   "accept": "Accept",
   "telegram": "Telegram",
+  "maxfarm": "Max Farm",
   "agreeAndAccept": "I Agree & Accept",
   "transactionSuccess": "Transaction Success",
   "networkMembers": "Network <br/>Members",
@@ -72,7 +73,7 @@
   "PrivateSaleNewToken": "Private Sale New Token",
   "PrivateSalePool": "Private Sale",
   "PersonalNft": "Total Investment",
-  "TotalNetworkMember": "Total network member",
+  "TotalNetworkMember": "Affiliate",
   "ipo": "IPO",
   "swap": "Swap",
   "swipe": "Swipe",
@@ -90,7 +91,7 @@
   "rankreq": "Rank Req",
   "maxBuyNFT": "Max buy NFT",
   "totalSupply": "Total Supply",
-  "globalNetworkFarm": "NFT Wang",
+  "globalNetworkFarm": "Wang",
   "remainingFarm": "Total Return",
   "percentage": "Percentage",
   "claim": "Claim",
